--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
 name: Build and Release
 
 on:
-  # "v" で始まるタグをプッシュした時に動く (例: v1.0.0)
+  # mainブランチへのプッシュ時に実行
   push:
-    tags:
-      - 'v*'
+    branches:
+      - main
+      - master
   # 手動実行も可能にする
   workflow_dispatch:
 
@@ -94,7 +95,8 @@ jobs:
     name: Create Release
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    # 手動実行時のみリリースを作成（通常のプッシュ時はスキップ）
+    if: github.event_name == 'workflow_dispatch'
     permissions:
       contents: write
     steps:
